<resources>
    <string name="app_name">ESL SmartHome</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log out</string>
    <string name="action_change_password">Change password</string>
    <string name="action_delete_account">Delete account</string>

    <!-- Splash Activity -->
    <string name="splash_title">ESL\nSmartHome</string>

    <!-- SignIn Activity -->
    <string name="sign_in_title">Sign In</string>
    <string name="sign_in_email">Email</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_in_login">LogIn</string>
    <string name="sign_in_signup"><u>Don\'t have an account? Sign up!</u></string>
    <string name="sign_in_change_password">Forgot your password?</string>

    <!-- SignUp Activity -->
    <string name="sign_up_title">Sign Up</string>
    <string name="sign_up_email">Email</string>
    <string name="sign_up_password">Password</string>
    <string name="sign_up_confirm_password">Confirm password</string>
    <string name="sign_up_signup">SignUp</string>

    <!-- Change password Activity -->
    <string name="change_password_title">Reset Password</string>
    <string name="change_password_email">Email</string>
    <string name="change_password_send_email">Send Email</string>

    <!-- User -->
    <string name="login_incorrect">Invalid email or password!</string>
    <string name="email_invalid">Email already exists!</string>
    <string name="email_bad_formatted">Incorrect email!</string>
    <string name="password_bad_formatted">Incorrect password!</string>
    <string name="passwords_non_equals">Passwords must match!</string>
    <string name="user_deleted">Account deleted!</string>
    <string name="user_not_deleted">Account not deleted!</string>
    <string name="changed_password">Password updated!</string>
    <string name="not_changed_password">Password not updated!</string>
    <string name="verification_email_sent">Verification email sent!</string>
    <string name="verification_email_failed">Verification email not sent!</string>
    <string name="verify_email">Please verify email!</string>
    <string name="change_password_email_sent">Reset password email sent!</string>
    <string name="change_password_email_failed">Reset password email not sent!</string>

    <!-- LogOut Dialog -->
    <string name="logout_dialog_title">Log out</string>
    <string name="logout_dialog_message">Are you sure?</string>
    <string name="logout_dialog_positive">Yes</string>
    <string name="logout_dialog_negative">No</string>

    <!-- Change password Dialog -->
    <string name="change_password_dialog_title">Change password</string>
    <string name="change_password_dialog_old_password">Old password</string>
    <string name="change_password_dialog_new_password">New password</string>
    <string name="change_password_dialog_confirm_new_password">Confirm new password</string>
    <string name="change_password_dialog_positive">Ok</string>
    <string name="change_password_dialog_negative">Cancel</string>

    <!-- Delete user Dialog -->
    <string name="delete_user_dialog_title">Delete account</string>
    <string name="delete_user_dialog_message">You must enter the password to delete the account.</string>
    <string name="delete_user_dialog_password">Password</string>
    <string name="delete_user_dialog_positive">Ok</string>
    <string name="delete_user_dialog_negative">Cancel</string>

    <!-- Action Dialog -->
    <string name="action_dialog_title">Allow action?</string>
    <string name="action_dialog_message">Are you sure?</string>
    <string name="action_dialog_positive">Yes</string>
    <string name="action_dialog_negative">No</string>
</resources>
