<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.SignUpActivity"
        android:layout_marginLeft="@dimen/activity_margin_lr"
        android:layout_marginRight="@dimen/activity_margin_lr">

        <TextView
            android:id="@+id/sign_up_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/sign_up_title"
            android:textAlignment="center"
            android:textSize="@dimen/activity_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sign_up_email_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/sign_up_email"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_title"
            tools:layout_editor_absoluteX="16dp" />

        <EditText
            android:id="@+id/sign_up_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_email_title"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/sign_up_password_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sign_up_password"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_email"
            tools:layout_editor_absoluteX="16dp" />

        <EditText
            android:id="@+id/sign_up_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_password_title"
            tools:layout_editor_absoluteX="25dp" />

        <TextView
            android:id="@+id/sign_up_confirm_password_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sign_up_confirm_password"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_password"
            tools:layout_editor_absoluteX="16dp" />

        <EditText
            android:id="@+id/sign_up_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_confirm_password_title"
            tools:layout_editor_absoluteX="25dp" />

        <Button
            android:id="@+id/sign_up_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/sign_up_signup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_confirm_password" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>